--- a/shorter_workbook.ipynb
+++ b/shorter_workbook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.categoryId = df.categoryId.astype('object')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -75,132 +84,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Timestamp('2022-10-26 15:58:27+0000', tz='UTC')"
+       "0     2022-10-26 22:00:09+00:00\n",
+       "1     2022-10-26 15:58:27+00:00\n",
+       "2     2022-10-27 00:18:46+00:00\n",
+       "3     2022-10-27 00:00:09+00:00\n",
+       "4     2022-10-26 05:06:26+00:00\n",
+       "                 ...           \n",
+       "195   2022-10-21 20:48:29+00:00\n",
+       "196   2022-10-20 20:00:01+00:00\n",
+       "197   2022-10-21 04:01:22+00:00\n",
+       "198   2022-10-23 16:00:08+00:00\n",
+       "199   2022-10-20 09:43:11+00:00\n",
+       "Name: publishedAt, Length: 200, dtype: datetime64[ns, UTC]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#convert publishedAT to datetime column\n",
-    "df.publishedAt = pd.to_datetime(df.publishedAt)\n",
-    "df.loc[1,'publishedAt']"
+    "df.publishedAt = pd.to_datetime(df.publishedAt, utc=True)\n",
+    "df.publishedAt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#set date to next day in order to capture videos released at different times in different time zones\n",
+    "df.trending_date = '22.28.10'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0     2022-10-27\n",
-       "1     2022-10-27\n",
-       "2     2022-10-27\n",
-       "3     2022-10-27\n",
-       "4     2022-10-27\n",
-       "         ...    \n",
-       "195   2022-10-27\n",
-       "196   2022-10-27\n",
-       "197   2022-10-27\n",
-       "198   2022-10-27\n",
-       "199   2022-10-27\n",
-       "Name: trending_date, Length: 200, dtype: datetime64[ns]"
+       "0     2022-10-28 00:00:00+00:00\n",
+       "1     2022-10-28 00:00:00+00:00\n",
+       "2     2022-10-28 00:00:00+00:00\n",
+       "3     2022-10-28 00:00:00+00:00\n",
+       "4     2022-10-28 00:00:00+00:00\n",
+       "                 ...           \n",
+       "195   2022-10-28 00:00:00+00:00\n",
+       "196   2022-10-28 00:00:00+00:00\n",
+       "197   2022-10-28 00:00:00+00:00\n",
+       "198   2022-10-28 00:00:00+00:00\n",
+       "199   2022-10-28 00:00:00+00:00\n",
+       "Name: trending_date, Length: 200, dtype: datetime64[ns, UTC]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#convert trending to datetime column\n",
-    "df.trending_date = pd.to_datetime(df.trending_date, format='%y.%d.%m')\n",
+    "df.trending_date = pd.to_datetime(df.trending_date, format='%y.%d.%m', utc=True)\n",
     "df.trending_date"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Timestamp('2022-10-26 15:58:27')"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#import tzinfo inorder to strip time zone information from published at. \n",
-    "#this makes it a \"naive\" datetime object. may want to change this approach\n",
-    "from datetime import tzinfo\n",
-    "\n",
-    "df.loc[1,'publishedAt'].replace(tzinfo=None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#import tzinfo inorder to strip time zone information from published at. \n",
+    "#this makes it a \"naive\" datetime object. may want to change this approach\n",
+    "# from datetime import tzinfo\n",
+    "\n",
+    "# df.loc[1,'publishedAt'].replace(tzinfo=None)\n",
     "#strips the timezone from each row\n",
-    "for n in range(0,200):\n",
-    "    df.loc[n,'publishedAt']= df.loc[n,'publishedAt'].replace(tzinfo=None)"
+    "# for n in range(0,200):\n",
+    "#     df.loc[n,'publishedAt']= df.loc[n,'publishedAt'].replace(tzinfo=None)\n",
+    "# df.loc[10, ['publishedAt']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create age column. may want to give timezone info to trending date instead of removing it from pblishedAt\n",
+    "df['age']=(df.trending_date - df.publishedAt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "publishedAt    2022-10-27 04:04:06\n",
-       "Name: 10, dtype: object"
+       "10   0 days 19:55:54\n",
+       "18   0 days 19:59:53\n",
+       "15   0 days 21:59:50\n",
+       "11   0 days 23:40:21\n",
+       "2    0 days 23:41:14\n",
+       "3    0 days 23:59:51\n",
+       "21   0 days 23:59:52\n",
+       "6    1 days 01:48:57\n",
+       "0    1 days 01:59:51\n",
+       "8    1 days 02:59:52\n",
+       "Name: age, dtype: timedelta64[ns]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.loc[10, ['publishedAt']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/homebrew/anaconda3/lib/python3.9/site-packages/pandas/core/arrays/datetimelike.py:1189: PerformanceWarning: Adding/subtracting object-dtype array to DatetimeArray not vectorized.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
-   "source": [
-    "#create age column. may want to give timezone info to trending date instead of removing it from pblishedAt\n",
-    "df['age']=(df.trending_date - df.publishedAt)"
+    "df.age.sort_values().head(10)"
    ]
   },
   {
@@ -211,44 +223,43 @@
     "\n",
     "Have them all as a weighted ratio\n",
     "\n",
-    "views = views - likes - comments\n",
-    "\n",
-    "engagement = views + (likes * 2) + (comments * 4) --> n==measure of effort. view and click = like ... view, click, type, submit = comment\n"
+    "df['engagement'] = (df.likes + df.comment_count * 4 )/df.view_count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "#creates engagement metric. not sure how to do weightd columns really\n",
-    "df['engagement'] = (df.view_count - df.likes) + (df.likes * 2) + (df.comment_count * 4) "
+    "#df['engagement'] = (df.view_count - df.likes) + (df.likes * 2) + (df.comment_count * 4) \n",
+    "df['engagement'] = (df.likes + df.comment_count * 4 )/df.view_count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0        851453.0\n",
-       "1       1812843.0\n",
-       "2       1057839.0\n",
-       "3        514531.0\n",
-       "4       1624979.0\n",
-       "          ...    \n",
-       "195      909446.0\n",
-       "196     6407837.0\n",
-       "197    13915892.0\n",
-       "198     1064503.0\n",
-       "199     1990537.0\n",
+       "0      0.137897\n",
+       "1      0.040702\n",
+       "2      0.100914\n",
+       "3      0.099933\n",
+       "4      0.016842\n",
+       "         ...   \n",
+       "195    0.085803\n",
+       "196    0.041752\n",
+       "197    0.094759\n",
+       "198    0.081997\n",
+       "199    0.040904\n",
        "Name: engagement, Length: 200, dtype: float64"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,12 +277,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6, 20)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#adds sponsored column based on appearance of word sponsored in the description\n",
-    "df['sponsored'] = np.where(df.description.str.contains('sponsor'), 'yes', 'no')\n",
+    "df['sponsored'] = np.where(df.description.str.contains('sponsor'), 1, 0)\n",
     "df[df.description.str.contains('sponsored')].shape"
    ]
   },
@@ -333,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,14 +365,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/x7/9w9mh0fd73zg4jr8l_9v9h840000gn/T/ipykernel_2496/2021686076.py:1: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
+      "/var/folders/x7/9w9mh0fd73zg4jr8l_9v9h840000gn/T/ipykernel_10477/1604276903.py:2: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
       "  df.tags = df.tags.str.replace('|',\" \")\n"
      ]
     }
@@ -362,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -464,14 +486,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'chicago', \"y'\", 'OTF', '2020', 'video', 'hip', 'official', 'hop', 'drill', 'the', 'waited', 'smurkio', 'lil', 'only', 'music', '2', 'durkio', 'family', 'y', 'just', 'all', 'durk', 'cause'}\n"
+      "{'music', 'drill', 'y', 'durkio', 'hip', '2', 'video', 'family', 'smurkio', 'the', 'OTF', 'only', 'waited', 'lil', 'cause', 'all', 'just', \"y'\", 'durk', 'official', 'hop', 'chicago', '2020'}\n"
      ]
     }
    ],
@@ -485,41 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def clean_text(text):\n",
-    "    \"\"\" \n",
-    "    Purpose:\n",
-    "        to clean text input into function by removing duplicate words, punctuations, and other things\n",
-    "    ---\n",
-    "    Parameters:\n",
-    "        text: a string\n",
-    "    ---\n",
-    "    Returns:\n",
-    "        tokens: a set of words found in the input text\n",
-    "    \"\"\"\n",
-    "\n",
-    "    nlp = spacy.load(\"en_core_web_sm\")\n",
-    "    doc = nlp(text)\n",
-    "    tokens = set()\n",
-    "    \n",
-    "    for token in doc:\n",
-    "        if token.pos_ not in ['SYM', 'PUNCT', 'DET']:\n",
-    "            tokens.add(token.text)\n",
-    "\n",
-    "    for ent in doc.ents:\n",
-    "        tokens.add(ent.text)\n",
-    "\n",
-    "    return tokens\n",
-    "    \n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +727,7 @@
       "TNT ORG\n",
       "TNT ORG\n",
       "Instagram ORG\n",
-      "{'Smith', 'updated', 'Suns', 'Subscribe', 'Twitter', 'Klay', 'on', 'highlights', 'NBA', 'Charles', 'break', 'Facebook', 'to', 'fellas', 'Johnson', 'Connect', 'Warriors', 'recap', 'down', 'TNT', 'Kenny', 'Barkley', 'Shaq', 'Ernie', 'https://twitter.com/NBAonTNT', 'Instagram', 'https://www.youtube.com/nbaontnt?sub_confirmation=1', 'Follow', 'https://www.facebook.com/NBAONTNT/', 'Like', 'Dbook', 'from', 'with', 'more', 'https://www.instagram.com/nbaontnt/?hl=en', 'Watch', 'Inside', 'interaction', 'latest', 'now', '\\r\\r', 'and', '\\r', 'videos', 'be'}\n"
+      "{'Follow', 'now', 'Like', 'and', 'NBA', 'Barkley', 'Dbook', 'Shaq', 'Facebook', 'on', 'Kenny', 'Suns', 'TNT', 'https://www.instagram.com/nbaontnt/?hl=en', '\\r', 'Subscribe', 'be', 'Connect', 'latest', 'highlights', 'to', 'Ernie', '\\r\\r', 'more', 'updated', 'Watch', 'videos', 'down', 'Klay', 'https://www.youtube.com/nbaontnt?sub_confirmation=1', 'https://twitter.com/NBAonTNT', 'break', 'recap', 'Johnson', 'interaction', 'Inside', 'from', 'with', 'Instagram', 'https://www.facebook.com/NBAONTNT/', 'fellas', 'Twitter', 'Charles', 'Warriors', 'Smith'}\n"
      ]
     }
    ],
@@ -751,13 +739,12 @@
     "        tokens.add(token.text)\n",
     "\n",
     "for ent in docb.ents:\n",
-    "    print(ent.text, ent.label_)\n",
-    "print(tokens)"
+    "    print(ent.text, ent.label_)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +774,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clean_text(text):\n",
+    "    \"\"\" \n",
+    "    Purpose:\n",
+    "        to clean text input into function by removing duplicate words, punctuations, and other things\n",
+    "    ---\n",
+    "    Parameters:\n",
+    "        text: a string\n",
+    "    ---\n",
+    "    Returns:\n",
+    "        tokens: a set of words found in the input text\n",
+    "    \"\"\"\n",
+    "\n",
+    "    nlp = spacy.load(\"en_core_web_sm\")\n",
+    "    doc = nlp(text)\n",
+    "    tokens = set()\n",
+    "    \n",
+    "    for token in doc:\n",
+    "        if token.pos_ not in ['SYM', 'PUNCT', 'DET']:\n",
+    "            tokens.add(token.text)\n",
+    "\n",
+    "    for ent in doc.ents:\n",
+    "        tokens.add(ent.text)\n",
+    "\n",
+    "    return tokens\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['cleaned_tags'] =  df['description'].apply(lambda x: clean_text(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,8 +828,74 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Think about combining the countries top 25 lists and control for duplicates. This way we can classify what videos have been a top 25 video \n"
+    "## Think about combining the countries top 25 lists and control for duplicates. \n",
+    "* This way we can classify what videos have been a top 25 video \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create rank and top 25 categories"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['rank'] = df.index + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['top_25'] = np.where(df['rank'] < 26, 1, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      1\n",
+       "1      1\n",
+       "2      1\n",
+       "3      1\n",
+       "4      1\n",
+       "      ..\n",
+       "195    0\n",
+       "196    0\n",
+       "197    0\n",
+       "198    0\n",
+       "199    0\n",
+       "Name: top_25, Length: 200, dtype: int64"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.top_25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
