--- a/shorter_workbook.ipynb
+++ b/shorter_workbook.ipynb
@@ -219,7 +219,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# View:Like ratio that can score the video | view:comment ratio\n",
+    "## View:Like ratio that can score the video | view:comment ratio\n",
     "\n",
     "Have them all as a weighted ratio\n",
     "\n",
@@ -308,42 +308,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Percent of capital letters in title \n"
+    "## Percent of capital letters in title \n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Age restricted\n"
+    "## Age restricted\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When we talk about subscribers we can take a look at age of channel\n"
+    "## When we talk about subscribers we can take a look at age of channel\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "How to drive up subscribers is a slightly separate question but we can ask it\n"
+    "## How to drive up subscribers is a slightly separate question but we can ask it\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "At what point does the video view count pass the subscriber view count\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can target placing videos in/out of the top 25 \n"
+    "## At what point does the video view count pass the subscriber view count\n"
    ]
   },
   {
@@ -833,6 +826,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## We can target placing videos in/out of the top 25 \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -888,6 +888,341 @@
    ],
    "source": [
     "df.top_25"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Convert Duration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      PT3M45S\n",
+       "1      PT10M1S\n",
+       "2      PT9M42S\n",
+       "3     PT10M40S\n",
+       "4      PT9M29S\n",
+       "5       PT7M5S\n",
+       "6      PT1M32S\n",
+       "7      PT5M54S\n",
+       "8        PT26S\n",
+       "9      PT3M47S\n",
+       "10    PT16M34S\n",
+       "11      PT2M2S\n",
+       "12     PT1M15S\n",
+       "13     PT1M50S\n",
+       "14     PT3M39S\n",
+       "15     PT3M37S\n",
+       "16     PT4M25S\n",
+       "17       PT38S\n",
+       "18     PT2M50S\n",
+       "19     PT2M20S\n",
+       "Name: duration, dtype: object"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.duration.head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testy = 'PT3M45S'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "testy.__contains__('M')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clean_duration(duration):\n",
+    "\n",
+    "    if 'S' not in duration:\n",
+    "        duration += '00S'\n",
+    "\n",
+    "    if duration.__contains__('M'):\n",
+    "        duration = int(duration.split('M')[0].split('T')[1]) * 60 + int(duration.split('M')[1][:-1])\n",
+    "    else:\n",
+    "        duration = int(duration[-3:-1])\n",
+    "\n",
+    "    return duration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PT3M45S\n",
+      "PT10M1S\n",
+      "PT9M42S\n",
+      "PT10M40S\n",
+      "PT9M29S\n",
+      "PT7M5S\n",
+      "PT1M32S\n",
+      "PT5M54S\n",
+      "PT3M47S\n",
+      "PT16M34S\n",
+      "PT2M2S\n",
+      "PT1M15S\n",
+      "PT1M50S\n",
+      "PT3M39S\n",
+      "PT3M37S\n",
+      "PT4M25S\n",
+      "PT2M50S\n",
+      "PT2M20S\n",
+      "PT2M21S\n",
+      "PT22M36S\n",
+      "PT29M24S\n",
+      "PT20M36S\n",
+      "PT3M18S\n",
+      "PT3M20S\n",
+      "PT8M16S\n",
+      "PT12M25S\n",
+      "PT28M16S\n",
+      "PT3M52S\n",
+      "PT58M41S\n",
+      "PT36M58S\n",
+      "PT1M31S\n",
+      "PT9M36S\n",
+      "PT17M3S\n",
+      "PT50M24S\n",
+      "PT8M6S\n",
+      "PT19M57S\n",
+      "PT8M45S\n",
+      "PT34M49S\n",
+      "PT57M41S\n",
+      "PT23M15S\n",
+      "PT3M00S\n",
+      "PT9M37S\n",
+      "PT22M18S\n",
+      "PT16M2S\n",
+      "PT19M52S\n",
+      "PT14M17S\n",
+      "PT28M12S\n",
+      "PT16M58S\n",
+      "PT4M53S\n",
+      "PT15M50S\n",
+      "PT8M56S\n",
+      "PT15M56S\n",
+      "PT5M9S\n",
+      "PT18M19S\n",
+      "PT2M20S\n",
+      "PT1M1S\n",
+      "PT2M43S\n",
+      "PT15M35S\n",
+      "PT19M00S\n",
+      "PT2M17S\n",
+      "PT15M41S\n",
+      "PT9M39S\n",
+      "PT1M1S\n",
+      "PT21M43S\n",
+      "PT17M59S\n",
+      "PT9M12S\n",
+      "PT5M40S\n",
+      "PT4M26S\n",
+      "PT22M16S\n",
+      "PT11M7S\n",
+      "PT19M14S\n",
+      "PT8M15S\n",
+      "PT14M42S\n",
+      "PT1M58S\n",
+      "PT2M13S\n",
+      "PT9M54S\n",
+      "PT23M35S\n",
+      "PT6M41S\n",
+      "PT2M57S\n",
+      "PT9M1S\n",
+      "PT10M36S\n",
+      "PT1M32S\n",
+      "PT21M42S\n",
+      "PT26M55S\n",
+      "PT19M37S\n",
+      "PT8M35S\n",
+      "PT14M30S\n",
+      "PT3M4S\n",
+      "PT3M42S\n",
+      "PT2M52S\n",
+      "PT12M30S\n",
+      "PT20M00S\n",
+      "PT17M52S\n",
+      "PT5M46S\n",
+      "PT12M24S\n",
+      "PT18M4S\n",
+      "PT34M19S\n",
+      "PT5M10S\n",
+      "PT4M30S\n",
+      "PT21M42S\n",
+      "PT3M11S\n",
+      "PT16M29S\n",
+      "PT3M45S\n",
+      "PT16M48S\n",
+      "PT7M53S\n",
+      "PT8M5S\n",
+      "PT12M44S\n",
+      "PT15M8S\n",
+      "PT23M55S\n",
+      "PT15M00S\n",
+      "PT3M26S\n",
+      "PT13M9S\n",
+      "PT2M18S\n",
+      "PT40M39S\n",
+      "PT26M45S\n",
+      "PT2M32S\n",
+      "PT20M41S\n",
+      "PT8M5S\n",
+      "PT7M15S\n",
+      "PT10M49S\n",
+      "PT11M16S\n",
+      "PT7M10S\n",
+      "PT6M13S\n",
+      "PT9M40S\n",
+      "PT46M47S\n",
+      "PT7M4S\n",
+      "PT6M57S\n",
+      "PT9M52S\n",
+      "PT32M36S\n",
+      "PT25M40S\n",
+      "PT19M31S\n",
+      "PT27M44S\n",
+      "PT8M31S\n",
+      "PT18M9S\n",
+      "PT8M3S\n",
+      "PT7M17S\n",
+      "PT6M22S\n",
+      "PT7M56S\n",
+      "PT2M42S\n",
+      "PT5M13S\n",
+      "PT8M1S\n",
+      "PT16M30S\n",
+      "PT2M12S\n",
+      "PT2M55S\n",
+      "PT14M36S\n",
+      "PT8M17S\n",
+      "PT11M54S\n",
+      "PT9M56S\n",
+      "PT8M35S\n",
+      "PT6M00S\n",
+      "PT4M17S\n",
+      "PT3M28S\n",
+      "PT2M57S\n",
+      "PT12M56S\n",
+      "PT6M59S\n",
+      "PT24M7S\n",
+      "PT12M40S\n",
+      "PT16M23S\n",
+      "PT18M54S\n",
+      "PT13M27S\n",
+      "PT22M33S\n",
+      "PT15M5S\n",
+      "PT4M30S\n",
+      "PT3M34S\n",
+      "PT21M21S\n",
+      "PT14M48S\n",
+      "PT11M47S\n",
+      "PT17M45S\n",
+      "PT8M56S\n",
+      "PT12M52S\n",
+      "PT6M58S\n",
+      "PT12M30S\n",
+      "PT31M59S\n",
+      "PT2M22S\n",
+      "PT43M52S\n",
+      "PT18M48S\n",
+      "PT3M5S\n",
+      "PT3M21S\n",
+      "PT29M23S\n",
+      "PT15M53S\n",
+      "PT10M25S\n",
+      "PT11M57S\n",
+      "PT13M57S\n",
+      "PT28M00S\n",
+      "PT1M48S\n",
+      "PT55M36S\n",
+      "PT4M12S\n",
+      "PT13M39S\n",
+      "PT41M2S\n",
+      "PT8M26S\n",
+      "PT3M48S\n",
+      "PT32M34S\n",
+      "PT3M5S\n"
+     ]
+    }
+   ],
+   "source": [
+    "df['duration'] = df['duration'].apply(lambda x:clean_duration(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       225\n",
+       "1       601\n",
+       "2       582\n",
+       "3       640\n",
+       "4       569\n",
+       "       ... \n",
+       "195    2462\n",
+       "196     506\n",
+       "197     228\n",
+       "198    1954\n",
+       "199     185\n",
+       "Name: duration, Length: 200, dtype: int64"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['duration']"
    ]
   },
   {
